[metadata]
name = package_name
version = 0.0.1
author = MichiganLaguna
author_email = michiganlaguna@gmail.com
description = short package description
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = package url
project_urls = 
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved : MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[option.packages.find]
where = src