[metadata]
name = package_name
version = 0.0.1
author = MichiganLaguna
author_email = michiganlaguna@gmail.com
description = small app to  make a map and establish routes
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/MichiganLaguna/odyssee_mapper.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved : MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[option.packages.find]
where = src